--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -43,7 +42,7 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-*.cover
+*,cover
 .hypothesis/
 
 # Translations
@@ -52,14 +51,6 @@ coverage.xml
 
 # Django stuff:
 *.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
 docs/_build/
@@ -67,35 +58,49 @@ docs/_build/
 # PyBuilder
 target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+*.iml
 
-# pyenv
-.python-version
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
 
-# celery beat schedule file
-celerybeat-schedule
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
+# .idea/shelf
 
-# SageMath parsed files
-*.sage.py
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
 
-# dotenv
-.env
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
 
-# virtualenv
-.venv
-venv/
-ENV/
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
 
-# Spyder project settings
-.spyderproject
-.spyproject
+## File-based project format:
+*.ipr
+*.iws
 
-# Rope project settings
-.ropeproject
+## Plugin-specific files:
 
-# mkdocs documentation
-/site
+# IntelliJ
+/out/
 
-# mypy
-.mypy_cache/
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
